--- a/src/site/notes/110-new/_2208261950.md
+++ b/src/site/notes/110-new/_2208261950.md
@@ -4,9 +4,4 @@
 
 导演: 伊峥 / 钱敬午
 编剧: 刘晓琳 / 白锦锦 / 戴勇
-主演: 虞书欣 / 王鹤棣 / 徐海乔 / 郭晓婷 / 张凌赫 / 李一桐 / 林柏叡 / 洪潇 / 张宸逍
-| HEADER | HEADER | HEADER |
-|:----:|:----:|:----:|
-|      |      ||
-|      |      |      |
-|      |      |      |
+主演: 虞书欣 / 王鹤棣 / 徐海乔 / 郭晓婷 / 张凌赫 / 李一桐 / 林柏叡 / 洪潇 / 张宸逍|
