--- a/src/site/notes/110-new/分栏效果示例_2208091106.md
+++ b/src/site/notes/110-new/分栏效果示例_2208091106.md
@@ -1,5 +1,5 @@
 ---
-{"dg-publish":true,"permalink":"/110-new/2208091106/","tags":["inbox,flashcards/test,","gardenEntry"],"dgHomeLink":true,"dgPassFrontmatter":false}
+{"dg-publish":true,"dg-permalink":"mynote","permalink":"/mynote/"}
 ---
 
 
@@ -57,7 +57,7 @@
 >	- [ ] 3333
 >	- [ ] 3333
 >		- [ ] 333
->		- [ ] 333
+>		- [x] 333
 >- [ ] 第二个菜单22
 >	- [ ] 子列表
 >- [ ] 第三个菜单 最好在源码模式下编辑
@@ -72,7 +72,7 @@
 >[!hibox]
 >这是可以自动隐藏的文字部分
 >- 122333
->- [ ] 3333
+>- [x] 3333
 >	- [x] 33333
 >- [ ] 4444
 
@@ -109,6 +109,7 @@
 > 
 >> [!Summary|wide-3 min-0]+ Using callout-metadata `wide-3 min-0`
 >> #### How to achieve this?
+<!--SR:!2022-10-08,1,230-->
 >> specify the sub callout as `> [!Summary|wide-3 min-0]`
 >> - this callout width is 3/6 overall width
 >
