--- a/src/site/notes/110-new/_2210291240.md
+++ b/src/site/notes/110-new/_2210291240.md
@@ -1,5 +1,5 @@
 ---
-{"dg-publish":true,"permalink":"/110-new/2210291240/","dgHomeLink":true}
+{"dg-publish":true,"dg-permalink":"mynote","permalink":"/mynote/","dgHomeLink":true}
 ---
 
 
