--- a/src/site/notes/110-new/_2211131501.md
+++ b/src/site/notes/110-new/_2211131501.md
@@ -6,6 +6,14 @@
 > 使用 foreach 循环遍历数组和集合元素时，无须获得数组和集合长度，无须根据索引来访问数组元素和集合元素，foreach 循环自动遍历数组和集合的每个元素。
 
 
+foreach虽然是for循环的简化版本，但是并不是说foreach就比for更好用，foreach适用于循环次数未知，或者计算循环次数比较麻烦情况下使用效率更高，但是更为复杂的一些循环还是for循环效率更高。
+
+```java
+for(循环对象的类型 元素名: 对象名 ){
+语句
+}
+```
+
 ```java
 public static void main(String[] args){
 
